# robot_judge

./: .gitignore  README.md  manage.py  pyproject.toml
courtroom/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
courtroom/migrations/: 0001_initial.py
courtroom/static/courtroom/css/: gracias.css  index.css
courtroom/templates/: gracias.html  index.html
robot_judge/: asgi.py  settings.py  urls.py  wsgi.py
