[tool.poetry]
name = "robot_judge"
version = "0.1.0"
description = "A simple application to teach the basics of ML through a robot judge"
authors = ["IrenePEncinar <irene.p.encinar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.3"
django-bootstrap4 = "^2.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
